tests/errors/semantic_52/s2.src
.IPPcode21

DEFVAR GF@AD
JUMPIFEQ label GF@AD int@8
